animation fini + media queries

--- a/html/menu_la_note_enchantée.html
+++ b/html/menu_la_note_enchantée.html
@@ -8,19 +8,19 @@
          src="https://kit.fontawesome.com/f3cd396271.js"
          crossorigin="anonymous"
          ></script>
-      <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="../css/prefixed/style.css">
    </head>
    <body>
       <div class="container">
          <div class="load">
-             <p class="load__lettre--1 load__lettre">o</p>
-             <p class="load__lettre--2 load__lettre">h</p>
-             <p class="load__lettre--3 load__lettre">m</p>
-             <p class="load__lettre--4 load__lettre">y</p>
-             <p class="load__lettre--5 load__lettre">f</p>
-             <p class="load__lettre--6 load__lettre">o</p>
-             <p class="load__lettre--7 load__lettre">o</p>
-             <p class="load__lettre--8 load__lettre">d</p>
+            <p class="load__lettre--1 load__lettre">o</p>
+            <p class="load__lettre--2 load__lettre">h</p>
+            <p class="load__lettre--3 load__lettre">m</p>
+            <p class="load__lettre--4 load__lettre">y</p>
+            <p class="load__lettre--5 load__lettre">f</p>
+            <p class="load__lettre--6 load__lettre">o</p>
+            <p class="load__lettre--7 load__lettre">o</p>
+            <p class="load__lettre--8 load__lettre">d</p>
          </div>
       </div>
       <header class="header">
@@ -37,138 +37,140 @@
                <i class="fas fa-heart" ></i>
             </div>
          </div>
-         <section id="menugrand" class="menu">
-            <h4>ENTRÉES</h4>
-            <article class="menu__carte menu__carte--1">
-               <div class="menu__texte">
-                  <h5>Ravioles de foie gras</h5>
-                  <p>Accompagnés de leur crème à la truffe</p>
-               </div>
-               <div class="menu__prix">
-                  <p>25€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--2">
-               <div class="menu__texte">
-                  <h5>Caviar osciètre</h5>
-                  <p>Sur blini à la farine de blé noir</p>
-               </div>
-               <div class="menu__prix">
-                  <p>35€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--3">
-               <div class="menu__texte">
-                  <h5>Homard et espuma de potiron</h5>
-                  <p>Mariné aux zestes d'orange</p>
-               </div>
-               <div class="menu__prix">
-                  <p>20€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--4">
-               <div class="menu__texte">
-                  <h5>Foie gras de canard cuit entier</h5>
-                  <p>Confiture de figue et pain toasté</p>
-               </div>
-               <div class="menu__prix">
-                  <p>35€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-         </section>
-         <section class="menu">
-            <h4>PLATS</h4>
-            <article class="menu__carte menu__carte--1">
-               <div class="menu__texte">
-                  <h5>Noix de coquilles Saint-Jacques</h5>
-                  <p>Sur lit de purée de céleri-rave</p>
-               </div>
-               <div class="menu__prix">
-                  <p>40€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--2">
-               <div class="menu__texte">
-                  <h5>Langoustine poêlée</h5>
-                  <p>Purée de patate douce</p>
-               </div>
-               <div class="menu__prix">
-                  <p>35€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--3">
-               <div class="menu__texte">
-                  <h5>Mijoté de queue de boeuf </h5>
-                  <p>Et riz sauvage aux zestes de citron</p>
-               </div>
-               <div class="menu__prix">
-                  <p>44€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-         </section>
-         <section id="menubouton" class="menu">
-            <h4>DESSERTS</h4>
-            <article class="menu__carte menu__carte--1">
-               <div class="menu__texte">
-                  <h5>Macaron noisette et chocolat</h5>
-                  <p>Glace au caramel brun et sel de Guérande</p>
-               </div>
-               <div class="menu__prix">
-                  <p>18€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--2">
-               <div class="menu__texte">
-                  <h5>Baba au rhum revisité </h5>
-                  <p>Avec son coulis de citron</p>
-               </div>
-               <div class="menu__prix">
-                  <p>22€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--3">
-               <div class="menu__texte">
-                  <h5>Tarte au citron meringuée</h5>
-                  <p>Déstructurée</p>
-               </div>
-               <div class="menu__prix">
-                  <p>23€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <div class="commander">
-               <input type="button" class="button" value="Commander">
-            </div>
-         </section>
+         <div class="gridpage">
+            <section id="menugrand" class="menu">
+               <h4>ENTRÉES</h4>
+               <article class="menu__carte menu__carte--1">
+                  <div class="menu__texte">
+                     <h5>Ravioles de foie gras</h5>
+                     <p>Accompagnés de leur crème à la truffe</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>25€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--2">
+                  <div class="menu__texte">
+                     <h5>Caviar osciètre</h5>
+                     <p>Sur blini à la farine de blé noir</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>35€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--3">
+                  <div class="menu__texte">
+                     <h5>Homard et espuma de potiron</h5>
+                     <p>Mariné aux zestes d'orange</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>20€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--4">
+                  <div class="menu__texte">
+                     <h5>Foie gras de canard cuit entier</h5>
+                     <p>Confiture de figue et pain toasté</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>35€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+            </section>
+            <section class="menu">
+               <h4>PLATS</h4>
+               <article class="menu__carte menu__carte--1">
+                  <div class="menu__texte">
+                     <h5>Noix de coquilles Saint-Jacques</h5>
+                     <p>Sur lit de purée de céleri-rave</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>40€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--2">
+                  <div class="menu__texte">
+                     <h5>Langoustine poêlée</h5>
+                     <p>Purée de patate douce</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>35€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--3">
+                  <div class="menu__texte">
+                     <h5>Mijoté de queue de boeuf </h5>
+                     <p>Et riz sauvage aux zestes de citron</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>44€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+            </section>
+            <section class="menu">
+               <h4>DESSERTS</h4>
+               <article class="menu__carte menu__carte--1">
+                  <div class="menu__texte">
+                     <h5>Macaron noisette et chocolat</h5>
+                     <p>Glace au caramel brun et sel de Guérande</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>18€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--2">
+                  <div class="menu__texte">
+                     <h5>Baba au rhum revisité </h5>
+                     <p>Avec son coulis de citron</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>22€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--3">
+                  <div class="menu__texte">
+                     <h5>Tarte au citron meringuée</h5>
+                     <p>Déstructurée</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>23€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+            </section>
+         </div>
+         <div class="commander">
+            <input type="button" class="button" value="Commander">
+         </div>
       </main>
       <footer>
          <nav>
