--- a/html/menu_le_delice_des_sens.html
+++ b/html/menu_le_delice_des_sens.html
@@ -8,19 +8,19 @@
          src="https://kit.fontawesome.com/f3cd396271.js"
          crossorigin="anonymous"
          ></script>
-      <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="../css/prefixed/style.css">
    </head>
    <body>
       <div class="container">
          <div class="load">
-             <p class="load__lettre--1 load__lettre">o</p>
-             <p class="load__lettre--2 load__lettre">h</p>
-             <p class="load__lettre--3 load__lettre">m</p>
-             <p class="load__lettre--4 load__lettre">y</p>
-             <p class="load__lettre--5 load__lettre">f</p>
-             <p class="load__lettre--6 load__lettre">o</p>
-             <p class="load__lettre--7 load__lettre">o</p>
-             <p class="load__lettre--8 load__lettre">d</p>
+            <p class="load__lettre--1 load__lettre">o</p>
+            <p class="load__lettre--2 load__lettre">h</p>
+            <p class="load__lettre--3 load__lettre">m</p>
+            <p class="load__lettre--4 load__lettre">y</p>
+            <p class="load__lettre--5 load__lettre">f</p>
+            <p class="load__lettre--6 load__lettre">o</p>
+            <p class="load__lettre--7 load__lettre">o</p>
+            <p class="load__lettre--8 load__lettre">d</p>
          </div>
       </div>
       <header class="header">
@@ -37,126 +37,128 @@
                <i class="fas fa-heart" ></i>
             </div>
          </div>
-         <section class="menu">
-            <h4>ENTRÉES</h4>
-            <article class="menu__carte menu__carte--1">
-               <div class="menu__texte">
-                  <h5>Tartare de thon</h5>
-                  <p>Assaisonné au yuzu</p>
-               </div>
-               <div class="menu__prix">
-                  <p>25€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--2">
-               <div class="menu__texte">
-                  <h5>Bouchée de homard croustillant</h5>
-                  <p>Et sa farandole de petits légumes</p>
-               </div>
-               <div class="menu__prix">
-                  <p>35€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--3">
-               <div class="menu__texte">
-                  <h5>Velouté de cèpes</h5>
-                  <p>Aux truffes</p>
-               </div>
-               <div class="menu__prix">
-                  <p>20€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-         </section>
-         <section class="menu">
-            <h4>PLATS</h4>
-            <article class="menu__carte menu__carte--1">
-               <div class="menu__texte">
-                  <h5>Poulet rôti aux herbes de Provence</h5>
-                  <p>Et sa crème de truffe</p>
-               </div>
-               <div class="menu__prix">
-                  <p>40€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--2">
-               <div class="menu__texte">
-                  <h5>Langouste rôtie </h5>
-                  <p>Et ses légumes de saison</p>
-               </div>
-               <div class="menu__prix">
-                  <p>35€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--3">
-               <div class="menu__texte">
-                  <h5>Côte de boeuf Angus </h5>
-                  <p>Et sa purée de panais</p>
-               </div>
-               <div class="menu__prix">
-                  <p>44€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-         </section>
-         <section id="menubouton" class="menu">
-            <h4>DESSERTS</h4>
-            <article class="menu__carte menu__carte--1">
-               <div class="menu__texte">
-                  <h5>Farandole de desserts</h5>
-                  <p>Du chef</p>
-               </div>
-               <div class="menu__prix">
-                  <p>18€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--2">
-               <div class="menu__texte">
-                  <h5>Crème brulée </h5>
-                  <p>Revisitée</p>
-               </div>
-               <div class="menu__prix">
-                  <p>22€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--3">
-               <div class="menu__texte">
-                  <h5>Tiramisu</h5>
-                  <p>À la noisette</p>
-               </div>
-               <div class="menu__prix">
-                  <p>23€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <div class="commander">
-               <input type="button" class="button" value="Commander">
-            </div>
-         </section>
+         <div class="gridpage" >
+            <section class="menu">
+               <h4>ENTRÉES</h4>
+               <article class="menu__carte menu__carte--1">
+                  <div class="menu__texte">
+                     <h5>Tartare de thon</h5>
+                     <p>Assaisonné au yuzu</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>25€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--2">
+                  <div class="menu__texte">
+                     <h5>Bouchée de homard croustillant</h5>
+                     <p>Et sa farandole de petits légumes</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>35€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--3">
+                  <div class="menu__texte">
+                     <h5>Velouté de cèpes</h5>
+                     <p>Aux truffes</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>20€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+            </section>
+            <section class="menu">
+               <h4>PLATS</h4>
+               <article class="menu__carte menu__carte--1">
+                  <div class="menu__texte">
+                     <h5>Poulet rôti aux herbes de Provence</h5>
+                     <p>Et sa crème de truffe</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>40€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--2">
+                  <div class="menu__texte">
+                     <h5>Langouste rôtie </h5>
+                     <p>Et ses légumes de saison</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>35€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--3">
+                  <div class="menu__texte">
+                     <h5>Côte de boeuf Angus </h5>
+                     <p>Et sa purée de panais</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>44€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+            </section>
+            <section class="menu">
+               <h4>DESSERTS</h4>
+               <article class="menu__carte menu__carte--1">
+                  <div class="menu__texte">
+                     <h5>Farandole de desserts</h5>
+                     <p>Du chef</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>18€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--2">
+                  <div class="menu__texte">
+                     <h5>Crème brulée </h5>
+                     <p>Revisitée</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>22€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--3">
+                  <div class="menu__texte">
+                     <h5>Tiramisu</h5>
+                     <p>À la noisette</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>23€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+            </section>
+         </div>
+         <div class="commander">
+            <input type="button" class="button" value="Commander">
+         </div>
       </main>
       <footer>
          <nav>
