--- a/html/menu_a_la_française.html
+++ b/html/menu_a_la_française.html
@@ -8,19 +8,19 @@
          src="https://kit.fontawesome.com/f3cd396271.js"
          crossorigin="anonymous"
          ></script>
-      <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="../css/prefixed/style.css">
    </head>
    <body>
       <div class="container">
          <div class="load">
-             <p class="load__lettre--1 load__lettre">o</p>
-             <p class="load__lettre--2 load__lettre">h</p>
-             <p class="load__lettre--3 load__lettre">m</p>
-             <p class="load__lettre--4 load__lettre">y</p>
-             <p class="load__lettre--5 load__lettre">f</p>
-             <p class="load__lettre--6 load__lettre">o</p>
-             <p class="load__lettre--7 load__lettre">o</p>
-             <p class="load__lettre--8 load__lettre">d</p>
+            <p class="load__lettre--1 load__lettre">o</p>
+            <p class="load__lettre--2 load__lettre">h</p>
+            <p class="load__lettre--3 load__lettre">m</p>
+            <p class="load__lettre--4 load__lettre">y</p>
+            <p class="load__lettre--5 load__lettre">f</p>
+            <p class="load__lettre--6 load__lettre">o</p>
+            <p class="load__lettre--7 load__lettre">o</p>
+            <p class="load__lettre--8 load__lettre">d</p>
          </div>
       </div>
       <header class="header">
@@ -37,126 +37,128 @@
                <i class="fas fa-heart" ></i>
             </div>
          </div>
-         <section class="menu">
-            <h4>ENTRÉES</h4>
-            <article class="menu__carte menu__carte--1">
-               <div class="menu__texte">
-                  <h5>Tartare de poulpe acidulé</h5>
-                  <p>Aux zestes d'orange</p>
-               </div>
-               <div class="menu__prix">
-                  <p>25€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle"></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--2">
-               <div class="menu__texte">
-                  <h5>Velouté de légumes d'antan</h5>
-                  <p>Carotte, panais, topinambour</p>
-               </div>
-               <div class="menu__prix">
-                  <p>35€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--3">
-               <div class="menu__texte">
-                  <h5>Soupe à l'oignon</h5>
-                  <p>Revisitée</p>
-               </div>
-               <div class="menu__prix">
-                  <p>20€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-         </section>
-         <section class="menu">
-            <h4>PLATS</h4>
-            <article class="menu__carte menu__carte--1">
-               <div class="menu__texte">
-                  <h5>Coquilles Saint-Jacques</h5>
-                  <p>Accompagnées d'une purée de panais</p>
-               </div>
-               <div class="menu__prix">
-                  <p>40€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--2">
-               <div class="menu__texte">
-                  <h5>Magret de canard</h5>
-                  <p>Et parmentier de pommes de terre</p>
-               </div>
-               <div class="menu__prix">
-                  <p>35€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--3">
-               <div class="menu__texte">
-                  <h5>Pigeonneau d’Ille-et-Vilaine</h5>
-                  <p>Sur son lit de gnocchis aux légumes</p>
-               </div>
-               <div class="menu__prix">
-                  <p>44€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-         </section>
-         <section id="menubouton" class="menu">
-            <h4>DESSERTS</h4>
-            <article class="menu__carte menu__carte--1">
-               <div class="menu__texte">
-                  <h5>Pétales de violettes glacés</h5>
-                  <p>Et purée de noisettes</p>
-               </div>
-               <div class="menu__prix">
-                  <p>18€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--2">
-               <div class="menu__texte">
-                  <h5>Fondant au chocolat</h5>
-                  <p>Revisité</p>
-               </div>
-               <div class="menu__prix">
-                  <p>22€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <article class="menu__carte menu__carte--3">
-               <div class="menu__texte">
-                  <h5>Millefeuille croustillant</h5>
-                  <p>Myrtilles et pâte d’amande</p>
-               </div>
-               <div class="menu__prix">
-                  <p>23€</p>
-               </div>
-               <div class="menu__anim">
-                  <i class="fas fa-check-circle" ></i>
-               </div>
-            </article>
-            <div class="commander">
-               <input type="button" class="button" value="Commander">
-            </div>
-         </section>
+         <div class="gridpage">
+            <section class="menu">
+               <h4>ENTRÉES</h4>
+               <article class="menu__carte menu__carte--1">
+                  <div class="menu__texte">
+                     <h5>Tartare de poulpe acidulé</h5>
+                     <p>Aux zestes d'orange</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>25€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle"></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--2">
+                  <div class="menu__texte">
+                     <h5>Velouté de légumes d'antan</h5>
+                     <p>Carotte, panais, topinambour</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>35€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--3">
+                  <div class="menu__texte">
+                     <h5>Soupe à l'oignon</h5>
+                     <p>Revisitée</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>20€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+            </section>
+            <section class="menu">
+               <h4>PLATS</h4>
+               <article class="menu__carte menu__carte--1">
+                  <div class="menu__texte">
+                     <h5>Coquilles Saint-Jacques</h5>
+                     <p>Accompagnées d'une purée de panais</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>40€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--2">
+                  <div class="menu__texte">
+                     <h5>Magret de canard</h5>
+                     <p>Et parmentier de pommes de terre</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>35€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--3">
+                  <div class="menu__texte">
+                     <h5>Pigeonneau d’Ille-et-Vilaine</h5>
+                     <p>Sur son lit de gnocchis aux légumes</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>44€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+            </section>
+            <section class="menu">
+               <h4>DESSERTS</h4>
+               <article class="menu__carte menu__carte--1">
+                  <div class="menu__texte">
+                     <h5>Pétales de violettes glacés</h5>
+                     <p>Et purée de noisettes</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>18€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--2">
+                  <div class="menu__texte">
+                     <h5>Fondant au chocolat</h5>
+                     <p>Revisité</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>22€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+               <article class="menu__carte menu__carte--3">
+                  <div class="menu__texte">
+                     <h5>Millefeuille croustillant</h5>
+                     <p>Myrtilles et pâte d’amande</p>
+                  </div>
+                  <div class="menu__prix">
+                     <p>23€</p>
+                  </div>
+                  <div class="menu__anim">
+                     <i class="fas fa-check-circle" ></i>
+                  </div>
+               </article>
+            </section>
+         </div>
+         <div class="commander">
+            <input type="button" class="button" value="Commander">
+         </div>
       </main>
       <footer>
          <nav>
